New code with cleaner practices

--- a/maps/index.html
+++ b/maps/index.html
@@ -14,6 +14,6 @@
 
 
   <!-- Adding type = "module" will produce an error in the browser: Uncaught ReferenceError: parcelRequire is not defined -->
-  <script type="module" src="./src/index.ts"></script>
+  <script src="./src/index.ts"></script>
 </body>
 </html>
